--- a/templates/base.html
+++ b/templates/base.html
@@ -2,45 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}">
-    <title>Hello, Flask</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}"
+		type="text/css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+	<title>Hello, Flask</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Thorin &amp; Company</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about') }}">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('careers') }}">Careers</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+		<div class="container">
+			<a class="navbar-brand" href="index.html">Thorin &amp; Company</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+				aria-label="Toggle navigation">
+				Menu
+				<i class="fas fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('index') }}">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('about') }}">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('careers') }}">Careers</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-   <!-- Page Header -->
-	<header class="masthead" style="background-image: url('https://i.pinimg.com/originals/58/01/b1/5801b1b869309df5d19611004be61a0e.png')">
+	<!-- Page Header -->
+	<header class="masthead"
+		style="background-image: url('https://i.pinimg.com/originals/58/01/b1/5801b1b869309df5d19611004be61a0e.png')">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -53,17 +56,17 @@
 			</div>
 		</div>
 	</header>
-	
+
 	<!-- Main Content -->
 	<div class="container">
 
-        {% block content %}
-        {% endblock %}
+		{% block content %}
+		{% endblock %}
 
 	</div>
-	
+
 	<hr>
-	
+
 	<!-- Footer -->
 	<footer>
 		<div class="container">
@@ -73,25 +76,25 @@
 						<li class="list-inline-item">
 							<a href="#">
 								<span class="fa-stack fa-lg">
-	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-	                </span>
+									<i class="fas fa-circle fa-stack-2x"></i>
+									<i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+								</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a href="#">
 								<span class="fa-stack fa-lg">
-	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-	                </span>
+									<i class="fas fa-circle fa-stack-2x"></i>
+									<i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+								</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a href="#">
 								<span class="fa-stack fa-lg">
-	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-	                </span>
+									<i class="fas fa-circle fa-stack-2x"></i>
+									<i class="fab fa-github fa-stack-1x fa-inverse"></i>
+								</span>
 							</a>
 						</li>
 					</ul>
@@ -100,17 +103,18 @@
 			</div>
 		</div>
 	</footer>
-	
+
 	<!-- Bootstrap core JavaScript -->
 	<script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-	
+
 	<!-- Custom scripts for this template -->
 	<script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
 
-    <script>
-        $("#copyright").text(new Date().getFullYear());
-    </script>
+	<script>
+		$("#copyright").text(new Date().getFullYear());
+	</script>
 
 </body>
+
 </html>
